# udp_ros_interface

./: README.md  package.xml
linux_side/: CMakeLists.txt
linux_side/launch/: main.launch
linux_side/scripts/: UDPSocket.py  opti_track_ros_interface_node.py
scripts/: UDPSocket.py  dependencies.py  opti_track_ros_interface_node.py
windows_side/: OptiTrackHandler.py  StorageHandler.py  config.yaml  dependencies.py  main.py
windows_side/NatNetPythonClient/: NatNetClient.py
