<?xml version="1.0"?>
<package format="2">
  <name>opti_track_ros_interface</name>
  <version>0.0.0</version>
  <description>The opti_track_ros_interface package</description>

  <maintainer email="gholamii.soheiil@gmail.com">Soheil Gholami</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <depend>std_msgs</depend>

  <export>
  </export>

</package>
